--- a/eShop.AdminApp/Views/User/Index.cshtml
+++ b/eShop.AdminApp/Views/User/Index.cshtml
@@ -5,6 +5,13 @@
     ViewData["Title"] = "Danh sách User";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section Scripts{
+    <script>
+        setTimeout(function () {
+            $('#msgAlert').fadeOut('slow');
+        }, 2000);
+    </script>
+}
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
@@ -27,9 +34,41 @@
         <!-- Default box -->
         <div class="card">
             <div class="card-header">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12">
+                        <a class="btn btn-success" asp-action="Create" asp-controller="User">Tạo Mới </a>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <form asp-action="Index" method="get">
+                            <div class="row">
+                                <div class=" col-md-9">
+                                    <input type="text" value="@ViewBag.Keyword" name="keyword" class="form-control" />
+                                </div>
+                                <div class=" col-md-3">
+                                    <button type="submit" class="btn btn-primary">Tìm</button>
+                                    <button type="button" onabort="window.location.href='/User/Index'" class="btn btn-dark">Reset</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
 
-                <a class="btn btn-success" asp-action="Create" asp-controller="User">Tạo Mới </a>
+                </div>
+                <div class="row">
+
+                    <div class="col-md-12 ">
+                        @if (ViewBag.SuccessMsg != null)
+                        {
+                            <div id="msgAlert" class="alert alert-success text-center" role="alert">
+                                @ViewBag.SuccessMsg
+                            </div>
+                        }
+                    </div>
+
+                </div>
+                <br />
+
                 <table class="table">
+
                     <thead>
                         <tr>
                             <th>
@@ -85,6 +124,7 @@
                     </tbody>
                 </table>
             </div>
+            @await Component.InvokeAsync("Pager", Model)
         </div>
     </section>
 </div>
