--- a/eShop.AdminApp/Views/User/Index.cshtml
+++ b/eShop.AdminApp/Views/User/Index.cshtml
@@ -51,7 +51,6 @@
                             </div>
                         </form>
                     </div>
-
                 </div>
                 <div class="row">
 
@@ -63,7 +62,6 @@
                             </div>
                         }
                     </div>
-
                 </div>
                 <br />
 
@@ -115,9 +113,10 @@
                                     @Html.DisplayFor(modelItem => item.Email)
                                 </td>
                                 <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                    @Html.ActionLink("Sửa", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Xem", "Details", new { id = item.Id }) |
+                                    @Html.ActionLink("Xoá", "Delete", new { id = item.Id }) |
+                                    @Html.ActionLink("Gán Quyền", "RoleAssign", new { id = item.Id })
                                 </td>
                             </tr>
                         }
