--- a/eShop.AdminApp/Views/Shared/Components/Navigation/Default.cshtml
+++ b/eShop.AdminApp/Views/Shared/Components/Navigation/Default.cshtml
@@ -26,10 +26,11 @@
         </div>
     </form>
     <form id="frmChangeLanguage" action="/Home/Language" method="post" class="navbar-nav ml-5  ">
-            <select class="form-control" onchange="this.form.submit()" asp-for="CurrentLanguageId"
-                    asp-items="@(new SelectList(Model.Languages,"Id","Name",Model.CurrentLanguageId))">
-            </select>
-        </form>
+        <input type="hidden" name="ReturnUrl" value="@Context.Request.Path" />
+        <select class="form-control" onchange="this.form.submit()" asp-for="CurrentLanguageId"
+                asp-items="@(new SelectList(Model.Languages,"Id","Name",Model.CurrentLanguageId))">
+        </select>
+    </form>
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
 
