--- a/eShop.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShop.AdminApp/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
     <!-- Font Awesome -->
     <link href="/libs/fontawesome-free/css/all.min.css" rel="stylesheet" />
-   
+
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- overlayScrollbars -->
@@ -86,7 +86,13 @@
                                 <li class="nav-item">
                                     <a asp-controller="Product" asp-action="Index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Danh sách</p>
+                                        <p>Sản phẩm</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-controller="Category" asp-action="Index" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Danh mục sản phẩm</p>
                                     </a>
                                 </li>
                             </ul>
