--- a/eShop.AdminApp/Views/Product/Edit.cshtml
+++ b/eShop.AdminApp/Views/Product/Edit.cshtml
@@ -1,9 +1,10 @@
-﻿@model eShop.ViewModels.Catalog.Products.ProductCreateRequest
+﻿@model eShop.ViewModels.Catalog.Products.ProductUpdateRequest
 
 @{
-    ViewData["Title"] = "Thêm mới Sản phẩm";
+    ViewData["Title"] = "Cập nhập sản phẩm";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @section Scripts{
     <script src="https://cdn.ckeditor.com/ckeditor5/27.1.0/classic/ckeditor.js"></script>
     @*<script>
@@ -23,12 +24,12 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Thêm mới Sản phẩm</h1>
+                    <h1>Cập nhập sản phẩm</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active">Thêm mới Sản phẩm</li>
+                        <li class="breadcrumb-item active">Cập nhập sản phẩm</li>
                     </ol>
                 </div>
             </div>
@@ -44,27 +45,13 @@
                     <a class="btn btn-success" asp-action="Index" asp-controller="Product">Về Danh Sách</a>
                 </div>
                 <hr />
-                <form asp-action="Create" enctype="multipart/form-data" method="post">
+                <form asp-action="Edit" enctype="multipart/form-data" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
                         <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Price" class="control-label"></label>
-                        <input asp-for="Price" type="number" class="form-control" />
-                        <span asp-validation-for="Price" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="OriginalPrice" class="control-label"></label>
-                        <input asp-for="OriginalPrice" type="number" class="form-control" />
-                        <span asp-validation-for="OriginalPrice" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Stock" class="control-label"></label>
-                        <input asp-for="Stock" type="number" class="form-control" />
-                        <span asp-validation-for="Stock" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
@@ -74,7 +61,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Details" class="control-label"></label>
-                        <input asp-for="Details" class="form-control" />
+                        <input id="txt_details" asp-for="Details" class="form-control" />
                         <span asp-validation-for="Details" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -102,7 +89,7 @@
                         <span asp-validation-for="ThumbnailImage" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Tạo mới" class="btn btn-primary" />
+                        <input type="submit" value="Cập nhập" class="btn btn-primary" />
                     </div>
                 </form>
             </div>
