product category and detail (user) product category (admin)

--- a/eShop.WebApp/Views/Home/Index.cshtml
+++ b/eShop.WebApp/Views/Home/Index.cshtml
@@ -2,11 +2,10 @@
 @using eShop.ViewModels.Catalog.Products;
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration;
 @inject LazZiya.ExpressLocalization.ISharedCultureLocalizer _loc;
+
 @{
-    var culture = CultureInfo.CurrentCulture.Name;
-}
-@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Trang Chủ";
+    var culture = CultureInfo.CurrentCulture;
 }
 
 @section slider{
@@ -68,7 +67,8 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="@(Configuration["BaseAddress"] + product.ThumbnailImage)" alt="@product.Name" />
+
+                            <img src="@(Configuration["BaseAddress"] + "/user-content/" +  product.ThumbnailImage)" alt="@product.Name" />
                             <h2>$@product.Price</h2>
                             <p>@product.Name</p>
                             <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="choose">
                         <ul class="nav nav-pills nav-justified">
-                            <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
+                            <li><a href="/@culture.Name/@_loc["products"]/@product.Id"><i class="fa fa-plus-square"></i>Xem sản phẩm</a></li>
                             <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
                         </ul>
                     </div>
@@ -379,7 +379,7 @@
                                 <div class="product-image-wrapper">
                                     <div class="single-products">
                                         <div class="productinfo text-center">
-                                            <img src="@item.ThumbnailImage" alt="@item.Name" />
+                                            <img src="@(Configuration["BaseAddress"] + "/user-content/" +  item.ThumbnailImage)" alt="@item.Name" />
                                             <h2>$@item.Price</h2>
                                             <p>@item.Name</p>
                                             <a href="@url" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
