--- a/eShop.WebApp/Views/Product/Category.cshtml
+++ b/eShop.WebApp/Views/Product/Category.cshtml
@@ -1,8 +1,60 @@
-﻿
+﻿@model CategoryViewModel
+@inject LazZiya.ExpressLocalization.ISharedCultureLocalizer _loc;
+@inject Microsoft.Extensions.Configuration.IConfiguration Configuration;
+
 @{
-    ViewData["Title"] = "Category";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = Model.Category.Name + (Model.Products.PageIndex == 1 ? "" : " - " + _loc["Page"] + " " + Model.Products.PageIndex);
+    ViewData["Description"] = Model.Category.Name + (Model.Products.PageIndex == 1 ? "" : " - " + _loc["Page"] + " " + Model.Products.PageIndex);
+    var culture = CultureInfo.CurrentCulture;
 }
 
-<h1>Category</h1>
+<div class="col-sm-9 padding-right">
+    <div class="features_items">
+        <!--features_items-->
+        <h2 class="title text-center">Features Items</h2>
+        <h3> @Model.Category.Name<small class="pull-right">40 sản phẩm có sẵn</small></h3>
+        <div class="col-sm-5" id="wrapper" style="float: right;">
+            <select>
+                <option selected>Choose a number</option>
+                <option value="3">Three</option>
+                <option value="1">One</option>
+                <option value="0">Zero</option>
+                <option value="2">Two</option>
+                <option value="8">Eight</option>
+            </select>
+        </div>
+        <hr />
+        <div class="clearfix"></div>
+        @for (int i = 0; i < Model.Products.Items.Count; i++)
+        {
+            var item = Model.Products.Items[i];
 
+            <div class="col-sm-4">
+                <div class="product-image-wrapper">
+                    <div class="single-products">
+                        <div class="productinfo text-center">
+                            <img src="@(Configuration["BaseAddress"]+ "/user-content/" + @item.ThumbnailImage) " alt="@item.Name" />
+                            <h2>$@item.Price</h2>
+                            <p>@item.Name</p>
+                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
+                        </div>
+                        <div class="product-overlay">
+                            <div class="overlay-content">
+                                <h2>$@item.Price</h2>
+                                <p>@item.Name</p>
+                                <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="choose">
+                        <ul class="nav nav-pills nav-justified">
+                            <li><a href="/@culture.Name/@_loc["products"]/@item.Id"><i class="fa fa-plus-square"></i>Xem sản phẩm</a></li>
+                            <li><a href=""><i class="fa fa-plus-square"></i>Add to compare</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        }
+        @await Component.InvokeAsync("Pager", Model.Products)
+    </div><!--features_items-->
+</div>
