--- a/eShop.WebApp/Views/Shared/Components/SideBar/Default.cshtml
+++ b/eShop.WebApp/Views/Shared/Components/SideBar/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<eShop.ViewModels.Catalog.Category.CategoryViewModel>
+﻿@model List<eShop.ViewModels.Catalog.ProductCategory.ProductCategoryViewModel>
 @inject LazZiya.ExpressLocalization.ISharedCultureLocalizer _loc;
 @{
     var culture = CultureInfo.CurrentCulture.Name;
@@ -20,13 +20,13 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordian" href="#@parent.SEOAlias">
+                                <a data-toggle="collapse" data-parent="#accordian" href="#@parent.SeoAlias">
                                     <span class="badge pull-right"><i class="fa fa-plus"></i></span>
                                     <a href="/@culture/@_loc["categoryUrl"]/@parent.Id">@parent.Name</a>
                                 </a>
                             </h4>
                         </div>
-                        <div id="@parent.SEOAlias" class="panel-collapse collapse">
+                        <div id="@parent.SeoAlias" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <ul>
                                     @foreach (var item in children)
