--- a/eShop.WebApp/Views/Product/Category.cshtml
+++ b/eShop.WebApp/Views/Product/Category.cshtml
@@ -33,7 +33,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="@(Configuration["BaseAddress"]+ "/user-content/" + @item.ThumbnailImage) " alt="@item.Name" />
+                            <img src="@(Configuration["BaseAddress"]+  @item.ThumbnailImage) " alt="@item.Name" />
                             <h2>$@item.Price</h2>
                             <p>@item.Name</p>
                             <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
