--- a/eShop.WebApp/Views/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Views/Shared/_Layout.cshtml
@@ -113,11 +113,25 @@
                     <div class="col-md-8 clearfix">
                         <div class="shop-menu clearfix pull-right">
                             <ul class="nav navbar-nav">
-                                <li><a href=""><i class="fa fa-user"></i> Account</a></li>
-                                <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
-                                <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                                <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                                <li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <li><a href=""><i class="fa fa-user"></i>Welcome <strong>@User.Identity.Name</strong> </a></li>
+                                    <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
+                                    <li>
+                                        <form action="/@culture/Account/Logout" method="post">
+                                            <button type="submit" style="padding-right:0;margin-top:10px;margin-bottom:0px;background:transparent;border:none;">
+                                                <i class="fa fa-lock"></i>
+                                                Logout
+                                            </button>
+                                        </form>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+                                    <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                                    <li><a href="/@culture/Account/Login"><i class="fa fa-lock"></i> Login</a></li>
+                                }
                             </ul>
                         </div>
                     </div>
