Update_Cart_And Order

--- a/eShop.AdminApp/Views/Category/Index.cshtml
+++ b/eShop.AdminApp/Views/Category/Index.cshtml
@@ -54,7 +54,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="row">
+                @* <div class="row">
 
                     <div class="col-md-12 ">
                         @if (ViewBag.SuccessMsg != null)
@@ -64,7 +64,7 @@
                             </div>
                         }
                     </div>
-                </div>
+                </div> *@
                 <br />
 
                 <table class="table">
