--- a/eShop.AdminApp/Views/User/Index.cshtml
+++ b/eShop.AdminApp/Views/User/Index.cshtml
@@ -52,7 +52,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="row">
+                @* <div class="row">
 
                     <div class="col-md-12 ">
                         @if (ViewBag.SuccessMsg != null)
@@ -62,7 +62,7 @@
                             </div>
                         }
                     </div>
-                </div>
+                </div> *@
                 <br />
 
                 <table class="table">
