--- a/eShop.WebApp/Views/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
     var culture = CultureInfo.CurrentCulture.Name;
 
 }
+@inject Microsoft.Extensions.Configuration.IConfiguration Configuration;
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,6 +33,8 @@
 </head><!--/head-->
 
 <body>
+    <input type="hidden" id="hidCulture" value="@culture" />
+    <input type="hidden" id="hidBaseAddress" value="@Configuration["BaseAddress"]" />
     <header id="header">
         <!--header-->
         <div class="header_top">
@@ -47,24 +50,23 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-3">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                <localize>Chọn ngôn ngữ</localize>
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="/vi/Home/SetCultureCookie?cltr=en&amp;returnUrl=/en">English</a></li>
-                                <li><a href="/en/Home/SetCultureCookie?cltr=vi&amp;returnUrl=/vi">Tiếng Việt</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    @*<div class="col-sm-3">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
+                                    <localize>Chọn ngôn ngữ</localize>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/vi/Home/SetCultureCookie?cltr=en&amp;returnUrl=/en">English</a></li>
+                                    <li><a href="/en/Home/SetCultureCookie?cltr=vi&amp;returnUrl=/vi">Tiếng Việt</a></li>
+                                </ul>
+                            </div>
+                        </div>*@
                     <div class="col-sm-6">
                         <div class="social-icons pull-right">
                             <ul class="nav navbar-nav">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <lass ="btn-groupi> <a href=" #"><i class="fa fa-linkedin"></i></a></lass>
                                 <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             </ul>
@@ -80,7 +82,7 @@
                 <div class="row">
                     <div class="col-md-4 clearfix">
                         <div class="logo pull-left">
-                            <a href="index.html"><img src="/images/home/logo.png" alt="" /></a>
+                            <a href="/"><img src="/images/home/logo.png" alt="" /></a>
                         </div>
                         <div class="btn-group pull-right clearfix">
                             <div class="btn-group">
@@ -128,10 +130,11 @@
                                 }
                                 else
                                 {
-                                    <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                                    <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+
                                     <li><a href="/@culture/Account/Login"><i class="fa fa-lock"></i> Login</a></li>
                                 }
+                                <li><a href="/@culture/Cart/Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+                                <li><a href="/@culture/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                             </ul>
                         </div>
                     </div>
@@ -154,7 +157,7 @@
                         </div>
                         <div class="mainmenu pull-left">
                             <ul class="nav navbar-nav collapse navbar-collapse">
-                                <li><a href="index.html" class="active">Home</a></li>
+                                <li><a href="/" class="active">Home</a></li>
                                 <li class="dropdown">
                                     <a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
@@ -357,5 +360,13 @@
     <script src="/js/price-range.js"></script>
     <script src="/js/jquery.prettyPhoto.js"></script>
     <script src="/js/main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/js/site.js"></script>
+    <script>
+        var site = new SiteController();
+        site.initialize();
+    </script>
+    @await Component.InvokeAsync("Notyf")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
