--- a/eShop.WebApp/Views/Account/Login.cshtml
+++ b/eShop.WebApp/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
     var culture = CultureInfo.CurrentCulture.Name;
 }
 
-<div class="col-sm-4 col-sm-offset-1">
+<div class="col-sm-7 col-sm-offset-1">
     <div class="login-form">
         <!--login form-->
         <h2>Login to your account</h2>
@@ -13,7 +13,9 @@
         <form asp-action="Login" asp-controller="Account" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="text" name="UserName" placeholder="Name" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
             <input type="password" name="Password" placeholder="Password" />
+            <span asp-validation-for="Password" class="text-danger"></span>
             <span>
                 <input type="checkbox" asp-for="RememberMe" class="checkbox">
                 Keep me signed in
@@ -22,18 +24,6 @@
         </form>
     </div><!--/login form-->
 </div>
-<div class="col-sm-1">
-    <h2 class="or">OR</h2>
-</div>
-<div class="col-sm-4">
-    <div class="signup-form">
-        <!--sign up form-->
-        <h2>New User Signup!</h2>
-        <form action="#">
-            <input type="text" placeholder="Name" />
-            <input type="email" placeholder="Email Address" />
-            <input type="password" placeholder="Password" />
-            <button type="submit" class="btn btn-default">Signup</button>
-        </form>
-    </div><!--/sign up form-->
+<div>
+    <p>Already have an account? <a href="/@culture/Account/Register">Create Your Account</a>.</p>
 </div>
